Website/SourceCode/Profiles/Profiles/Framework/CSS/UCSF.css
/* ... */
#header-ucsf img { border: none; }
#header-ucsf div#ucsfnav-container { background: #000;  width: 100%; }
#header-ucsf div#ucsfnav { width: 980px; height:30px; margin: 0 auto; padding-left: 20px; }
* html #header-ucsf div#ucsfnav { width: 972px; }
#header-ucsf div#ucsfnav a.ucsf-logo{ display: block; float: left; background: transparent url(../images/ucsf.png) no-repeat 0 0; width:43px; height:29px; text-indent: -99999px; }
#header-ucsf ul{ position: relative; float:left; margin: 3px 0 0; padding-left: 20px; list-style-type: none; }
#header-ucsf ul li{ display: inline; color:#fff; }
#header-ucsf div#ucsfnav ul li a { text-decoration: none; font-size:11px; color:#fff; border-left:1px solid #fff; padding:0 5px 0 10px; }
#header-ucsf div#ucsfnav ul li a:hover { text-decoration: underline; }
#header-ucsf div#ucsfnav ul li.first a { border: none; padding-left:5px; }
.institutionHeader { background-color: #FFFFFF; height: 95px; border-bottom: none; padding: 0; }
#site-logo { width: 515px; float: left; }
h1 {
  text-align: left; 
  font-size: 44px;
  line-height: 40px;
  font-family: Arial, Helvetica, sans serif;
  padding: 18px 0 12px 17px; margin: 0; 
  background: transparent url(../images/ProfilesLogo.gif) no-repeat 325px 14px; 
}
h1 a, h1 a:visited { 
  color: #659191; 
  text-decoration: none;
}
h1 a:hover { color: #457272; text-decoration: none; }
#tagline { 
  color: #666; 
  font: italic bold 20px Arial, Helvetica, sans serif; 
  padding: 0 0 0 2px; margin: 0; 
}
#powered-by-block { 
  float: left; width: 450px; padding-top: 18px;
  font-family: Arial,Helvetica,sans serif;
}
#powered-by-block a, #powered-by-block a:visited {
  background:url("../images/favicon.gif") no-repeat scroll 0 0 transparent;
  padding-left: 20px; margin-left: 310px;
  color: #D18146;
  font-size: 13px;
  font-weight: bold;
  line-height: 20px;
  text-decoration: none;
}
#powered-by-block a:hover {
  color: #D18146;
  text-decoration: underline;
} 
#new-features { float: left; width: 237px; margin: 20px 0 0 227px; margin-top: 15px\9; }
#new-features a, #new-features a:visited,
#new-features a:hover { background-color: #D18146; color: #FFF; padding: 6px 6px 6px 9px; margin: 0;
  font-family: Arial, Helvetica, sans serif; font-size: 14px; text-decoration: none;
  display: inline-block\9;
}
#new-features a:hover { text-decoration: underline; }
#new-features a img { vertical-align: top; }

table, tr { border-width: 0; border-spacing: 0; border-color: transparent; } /* so Chrome won't put black lines everywhere */
#page-container { background-color: #FFF; width: 980px; } 
.profiles { background-color: #FFF; margin-top: 0; }
.profiles .profilesPage { padding-top: 15px; }
.profiles .profilesPageColumnRightTop {
  background-image: none;
  border-top: 1px solid #CCC;
}
.profiles .profilesPageColumnRightTop,
.profiles .profilesPageColumnRightBottom { display: none; }
#ctl00_tblTableBody {
  border-left: none !important; 
  border-right: none !important; 
}
#ctl00_divPageColumnRightCenter { background: none !important;}
.profiles .profilesContentMain { margin-top: 6px; }
.profiles .profilesContentMain .pageTitle h2 a img { display: none; }  
.profiles .profilesContentMain .pageTitle h2 { color: #CA7C29 !important; }
.profiles .profilesContentMain .pageTitle h2 { font-size: 30px; font-weight: bold; line-height: 30px; }
.profiles .profilesContentMain .aboutText h3, h3 { color: #666; }
.profiles .profilesPageColumnLeft { padding-top: 6px; }
.profiles a, .profiles a:visited { text-decoration: none; color: #0088CC !important; }
.profiles a:hover { color: #005580 !important; }
.EditMenuTopRow, .topRow, .editPage .topRow td, .profiles .profilesContentActive .activeSectionHead, .listTable th { background-color: #EEE; }
.searchForm .searchSection { background-color: #EEEEEE; padding: 18px 0\9; }
.listTable .evenRow { background-color: #F2F7F7; }
.listTable td { border: none; border-right: solid 1px #CCC; cursor: default; }
.linky,
.listTable td:first-child { color: #0088CC; /* font-weight: bold; */ }
.linky:hover,
.listTable td:first-child:hover { color: #005580; text-decoration: underline; cursor: pointer; }
.listTablePagination { border-color: #CCC; background-color: #FFF; 
  margin-bottom: 10px; width: 667px; }
* html .listTablePagination { width: 678px; margin-bottom: 40px; }
*+html .listTablePagination { width: 678px; margin-bottom: 40px; }
.listTablePaginationFL img { margin-top: 4px; } 
.listTablePaginationFL img { margin-top: 5px\9; } 
.listTable table, .oddRow td, .evenRow td, .topRow th,
#thetable1 th, #similarConnection th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvIndirectConnectionDetails,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvWhoCanIEdit td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvYouCanEdit td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_gvMyProxies tr td,
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr th,
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr td { 
  border: 1px solid #CCC !important; 
}
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults .listTablePagination tr td { 
  border: none !important; padding-top: 5px; }
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr.edittable td:first-child, 
#ctl00_ContentMain_rptMain_ctl00_ctl00_pnlProxySearchResults tr.evenRow td:first-child { 
  color: #0088CC; cursor: pointer; }
.connectionContainerTable { background-color: #F2F7F7; border: 1px solid #CCC; }
.connectionContainerTable td { width: 220px; }

#defaultmenu, #minisearch { display: none; } 
.SupportText { border: none; }

.profiles .profilesFooter { background-color: #849696; text-align: center; font-size: 89%;
  width: 980px; border-top: 3px solid #666; margin: 10px auto; }
#footer-collaboration { background-color: #FFF; }
#footer-collaboration p { margin: 0; padding: 12px; text-align: left; }
#footer-contact { padding: 6px; border-top: 3px solid #666; }
/* ... */

